# test_project_1

./: .gitignore  1pager.md  README.md  event.json  helper.py  pyproject.toml  test.csv  test.py  test_exact_code.py  test_s3_simple.py  zip_lambda.sh
dags/: test.py
lambda_build/: lambda_function.py
s3-sqs-lambda-s3/: lambda_function.py  readme.md  test_event.json  test_lambda.py
s3-sqs-lambda-s3/terraform/: lambda.tf  outputs.tf  s3.tf  sqs.tf
sns_sqs/terraform/: main.tf  output.tf  publish_sns_simple.py  sns.tf  variables.tf
src/: lambda_function.py  scrape_handler.py
terraform/: deploy.sh  lambda.tf  s3.tf
