[tool.poetry]
name = "test_project_1"
version = "0.1.0"
description = "A basic Python project."
authors = ["Sonali Cornelio"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
boto3 = "^1.28.0"
aws-lambda-powertools = "^3.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)"
]
